# fetch-control

./: .gitignore  README.md  backup_bin.py  backup_fetch.yml  check_health.sh  deploy_app.yml  fetch-image-worker.service.j2  fetch-image-worker.timer.j2  fetch.service.j2  find_orphans.py  inventory.yml  main.py  nginx_fetch.conf  provision_fetch.yml  pyproject.toml  restore_bin.py  setup_app_env.yml  setup_app_logic.yml  setup_goose.yml  setup_stack.yml
bin_backups/: bin_1_snapshot.json  bin_4_snapshot.json
group_vars/: all.yml
migrations/: 001_initial_schema.sql  002_add_multi_tenant_support.sql  003_add_many_to_many_households.sql  004_add_location_image_to_bins.sql  005_add_parent_bin_to_bins.sql  006_create_items_table.sql  007_expand_item_details.sql  008_cleanup_and_add_price.sql  009_add_locations_table.sql  010_add_membership_id_and_constraints.sql  011_add_timestamps_and_activity_log.sql  012_remove_physical_locations.sql
scripts/: fetch-image-worker.service  fetch-image-worker.timer  process_images.py
templates/: admin.html  bin_view.html  dashboard.html  global_search.html  print_labels.html
